# libstructs

./: CMakeLists.txt
hashtable/: CMakeLists.txt  table.c
includes/: hashtable.h  list.h  retcodes.h  slice.h
includes/structs/: hashtable.h  list.h  retcodes.h  slice.h  str.h
list/: CMakeLists.txt  list.c
slice/: CMakeLists.txt  slice.c
src/: CMakeLists.txt  list.c  slice.c  string.c  table.c
test/: CMakeLists.txt  hashTest.cpp  hash_test.c  listTest.cpp  list_test.c  sliceTest.cpp  slice_test.c
